[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = "A Telegram bot powered by OpenRouter and python-telegram-bot"
authors = ["t14422374 <t14422374@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.*"
python-telegram-bot = "20.7"
requests = "^2.32.0"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
